Update the yelp_review_full notebook.

--- a/yelp_review_full.ipynb
+++ b/yelp_review_full.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bf284ff5",
    "metadata": {},
@@ -22,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6710f36e",
    "metadata": {},
@@ -40,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e3379ded",
    "metadata": {},
@@ -128,6 +131,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1adbaf86",
    "metadata": {},
@@ -193,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = yelp_df[\"test\"][:10]\n",
+    "train_df = yelp_df[\"test\"][:100]\n",
     "train_df"
    ]
   },
@@ -234,6 +238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "78ebcb15",
    "metadata": {},
